Image padding increased, Validation text on links lose text shadow, margin increase to align with other containers, and section fix: faculty-container was to small, so images would not be in row at any point.

--- a/css/style3.css
+++ b/css/style3.css
@@ -4,34 +4,46 @@ use # in front of the name of an id from your html page
 use . in front of the name of a class of things from your html page
 use , to separate a list of things that have some shared css rule
 use float to make something locate itself on the right or left
-
 */
 
 body {
-  padding: 30px;
-  background-color: #FFDE7A;
+  padding: 10px;
+  background-image: url("https://www.insidehighered.com/sites/default/server_files/media/iStock-636447976.jpg");
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-
-
-}
-#main-title{
-  margin-top: 100px;
-
-}
-
-h2 {
   color: white;
 }
+#main-title{
+  margin-top: 50px;
 
+}
+h1 {
+  color: white;
+  font-style: italic;
+  font-size: 50px;
+  text-shadow: 2px 3px gray;
+}
+h2 {
+  color: white;
+  text-align: left;
+  font-family: "Lucida Console", Lucida, monospace;
+  font-style: italic;
+  text-shadow: 1.5px 2px  gray;
+}
+
+li {
+  font-size: 14px;
+  font-family: "Lucida Console", Lucida, monospace;
+  text-shadow: 1px 2px gray;
+
+}
 .section {
-  border-radius: 25px;
-  padding: 20px;
+  border-radius: 5px;
+  padding: 5px;
   border: 5px solid;
-  margin: 10px;
-  max-width: 48em;
+  margin: 5px;
+  max-width: 100em;
 }
 
 #pslo {
@@ -53,26 +65,75 @@ h2 {
   background: #E814F7;
 }
 
+.faculty-list {
+  width: 25%;
+  display: table;
+  clear: both;
+}
+
 .faculty-container {
   margin-left: 100px;
-  flex-direction: row-reverse;
 }
 
 #validation {
-  background: #F71414;
+background: #F71414;
 }
 
 #style {
-  position: fixed;
+  position: absolute;
   left: 0;
-  right: 500px;
+  right: 0;
   top: 0;
   height: 50px;
   padding: 20px;
-
 }
-
 #style li {
   float: left;
+  text-shadow: 1px 2px gray;
+  font-size: 18px;
+}
+
+@media screen and (max-width: 925px) {
+  #style li {
+    font-size: 12px;
+  }
+}
+#style li a:link {
+  text-decoration: none;
+}
+#style li a:hover {
+  color: #F71414;
+  cursor: pointer;
+}
+
+#style li a {
+  display: block;
+  color: white;
+  text-align: left;
+  padding: 14px 16px; /*this adds some spacing around the items in our "nav bar" */
+  text-decoration: none;
+}
+
+#style ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+#faculty-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+
+img  {
+  padding: 10px;
+}
+
+.card-text li {
+  text-shadow: none;
 
 }
